fix: z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,6 +70,7 @@ nav {
   padding-top: 20px;
   position: fixed;
   right: 0;
+  z-index: 999;
 }
 
 nav ul{
